# teambuilder

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  tasks.py
.github/: environment.yml
.github/workflows/: workflow.yml
teambuilder/: __init__.py  teambuilder.py  util.py
teambuilder/tests/: test_teambuilder.py
teambuilder/tests/data/: cohort.csv  cohort.py  create.py
teambuilder/util/: __init__.py  util.py
