[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "teambuilder"
version = "2023.11.0"
authors = [
  { name="Marijan Beg", email="m.beg@imperial.ac.uk" },
]
description = "Python package for building diverse but equal teams."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "pandas >= 2.0.0",
]

[project.urls]
"Homepage" = "https://github.com/marijanbeg/teambuilder"

[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set. By default, Ruff omits rules that
# overlap with the use of a formatter, like Black, but we can override this behavior by
# explicitly adding the rule.
extend-select = [
    "E501",  # line-too-long 
    "UP",  # pyupgrade
    # "D",  # pydocstyle
    ]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
 
[tool.coverage.run]
omit = [
    "teambuilder/tests/*.py",
    ]

[tool.pytest.ini_options]
addopts = "-v --doctest-modules --junitxml=junit/test-results.xml --cov=teambuilder --cov-report=xml --cov-report=html"